compiler/test-data/parser/arena/errors/missing_for.frel
module arena.errors.missing_for

scheme User {
    id : Uuid .. identity
    name : String
}

arena UserArena {
    User
}
